<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margins"
    android:orientation="vertical">

    <TextView
        android:id="@+id/new_players_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/new_player_title"
        android:textSize="@dimen/title_size" />

    <TextView
        android:id="@+id/new_player_text"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/new_users_desc"
        android:textSize="@dimen/text_size" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/player_name_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Full Name"
            android:inputType="textCapSentences" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/player_email_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/player_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="E-mail address"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_player_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/add" />
</LinearLayout>