<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/activity_margins"
        android:orientation="vertical">

        <TextView
            android:id="@+id/new_match_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:text="@string/new_match_title"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/new_match_text"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/new_match_desc"
            android:textSize="@dimen/text_size" />

        <RadioGroup
            android:id="@+id/radioMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio1x1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="1x1" />

            <RadioButton
                android:id="@+id/radio1x2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1x2" />

            <RadioButton
                android:id="@+id/radio2x1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2x1" />

            <RadioButton
                android:id="@+id/radio2x2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2x2" />

        </RadioGroup>

        <TextView
            android:id="@+id/tvTeam1"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="Team1"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <Spinner
            android:id="@+id/player1_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <Spinner
            android:id="@+id/player2_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/player_name_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/etTeam1Score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Team1 score"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvTeam2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="Team2"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <Spinner
            android:id="@+id/player3_spinner"
            android:layout_width="fill_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content" />

        <Spinner

            android:id="@+id/player4_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:visibility="gone" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/player_email_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/etTeam2Score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Team2 score"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/add_match_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/add" />
    </LinearLayout>
</ScrollView>

